<resources>
    <string name="app_name"></string>
    <string name="splash">AMBROSS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Inicio</string>
    <string name="title_comprar">Comprar</string>
    <string name="title_menu1">Salir</string>
    <string name="title_dashboard">Seguimiento</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="adam_lienor_naruto">Adam Lienor Naruto</string>
    <string name="adam_leinos_gmail_com">Adam.leinos@gmail.com</string>
    <string name="perfil">Perfil</string>
    <string name="tiendas_favoritas">Tiendas Favoritas</string>
    <string name="enviar_comentarios">Enviar Comentarios</string>
    <string name="ayuda">Ayuda</string>
    <string name="opciones_avanzadas">Opciones Avanzadas</string>
    <string name="configurar_perfil">Configurar Perfil</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="open_drawer">Abrir Drawer</string>
    <string name="close_drawer">Cerrar Drawer</string>
    <string name="title_activity_main3"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Salir</string>
    <string name="ofertas_del_d_a">Ofertas del día</string>
    <string name="s_ndwich">Sándwich</string>
    <string name="comprar">Comprar</string>
    <string name="descripcion">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="precio_1">$6.990</string>
    <string name="precio_2">$8.000</string>
    <string name="precio_3">$4.500</string>
    <string name="precio_4">$1.700</string>
    <string name="a_s_lo">a sólo</string>
    <string name="pizza_margherita">Pizza Margherita</string>
    <string name="sushi">Sushi Burrito</string>
    <string name="hamburguesa">Hamburguesa</string>
    <string name="descripcion_doggis">Doggis, mucho por poco, con las mejores promociones y variedades de Hot Dog.</string>
    <string name="descripcion_jpd"><![CDATA[Porque no hay nada mejor que disfrutar junto a los amigos, Así es como nació Pedro, Juan & Diego®.]]></string>
    <string name="descripcion_pizza">Cadena de Pizzeria con años en el mercado, destacan sus pizzas y buenas ofertas.</string>
    <string name="title_activity_estacionamiento">Map</string>
</resources>
